Update dropdown layout issues. Fix dropdown animation. Update itemsList styles and add new svg trash-icon

--- a/src/Layout-components/Button/Button.scss
+++ b/src/Layout-components/Button/Button.scss
@@ -1,3 +1,5 @@
+$btn-color: var(--primary);
+
 .btn {
   vertical-align: middle;
   padding: 0.5rem 1rem;
@@ -6,16 +8,14 @@
   border: none;
   background-color: var(--primary);
   border-radius: 5px;
-  transition: filter 200ms ease;
-  transition: transform 400ms ease-in-out;
+  transition: box-shadow 300ms ease;
 
   &:hover {
     cursor: pointer;
-    filter: brightness(var(--hover-brightness));
+    box-shadow: var(--darken);
   }
 
   &-icon {
-    transform-origin: center;
     vertical-align: middle;
     margin-left: 0.5rem;
   }
