--- a/src/components/Navigation/Dropdown/Dropdown.scss
+++ b/src/components/Navigation/Dropdown/Dropdown.scss
@@ -1,13 +1,12 @@
 .dropdown {
   position: absolute;
   top: calc(var(--nav-size) + 5px);
-  right: -120px;
+  right: -105px;
   width: 240px;
   transform: translateX(-45%);
   background-color: var(--bg-accent);
-  border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
-  padding: 1rem;
+  padding: 1rem 0;
   overflow: hidden;
   transition: height var(--speed) ease;
   color: var(--font-color);
@@ -23,9 +22,8 @@
     justify-content: space-evenly;
     align-items: center;
     border-radius: var(--border-radius);
-    transition: none;
+    margin: 0 1rem;
     padding: 0.5rem;
-    margin: 0;
     cursor: pointer;
 
     &:hover {
@@ -43,9 +41,9 @@
 .menu {
   width: 100%;
   background-color: var(--bg-accent);
-  transition: none;
 
   &-primary-enter {
+    position: absolute;
     transform: translateX(-115%);
   }
 
@@ -64,6 +62,7 @@
   }
 
   &-secondary-enter {
+    position: absolute;
     transform: translateX(115%);
   }
 
@@ -73,7 +72,6 @@
   }
 
   &-secondary-exit {
-    position: absolute;
   }
 
   &-secondary-exit-active {
